[project]
name = "my-project"
version = "1.0.0"
description = "pwc starter guide onboarding"
requires-python = ">=3.11,<3.12"
readme = "README.md"
authors = [
    { name = "Minwoo Lee", email = "minwoo.l.lee@pwc.com" } # Optional
]
maintainers = [
    { name = "Minwoo Lee", email = "minwoo.l.lee@pwc.com" } # Optional
]